feat: adding geometryOnly param to coverage
