# backend/src/controllers/data-filters.ts
@@ -20,7 +20,7 @@ export const getDataFilterById = async (req: Request, res: Response) => {
 };
 
 export const getDataFilterCoverage = async (req: Request, res: Response) => {
-  const data = await filterService.getCoverage(req.customData, req.params['filterId']!);
+  const data = await filterService.getCoverage(req.customData, req.params['filterId']!, !!req.query['geometryOnly']);
   res.json(data);
 };
 
